[package]
name = "bc_file_wr"
version = "0.1.0"
edition = "2024"

[dependencies]
bc_utils = {path = "../bc_utils"}
bc_utils_lg = {path = "../bc_utils_lg"}
bc_visual = {path = "../bc_visual"}
bc_trade_simulate = {path = "../bc_trade_simulate"}

bincode = {version = "2", features = ["serde"]}


[dev-dependencies]
criterion = {version ="0.3.5", features = ["html_reports"]}
pretty_assertions = "1"